k8s/overlays/local/balances-adjustment-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balances-adjustment-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/balances-adjustment-server"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Prefix         /balances-adjustment-server/;
spec:
  rules:
    - http:
        paths:
          - path: /balances-adjustment-server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: balances-adjustment-server
                port:
                  number: 80
